fix overflow

--- a/stats.css
+++ b/stats.css
@@ -15,6 +15,7 @@ body {
     line-height: 1.6;
     font-weight: 300;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .container {
@@ -82,6 +83,7 @@ body {
     border-radius: 20px;
     padding: 20px 30px 10px 30px;
     margin-bottom: 20px;
+    overflow-x: auto;
 }
 
 .downloads-section {
